# uTally

./: .gitignore  flake.nix  readme.md
firmware/: Cargo.toml
firmware/src/: main.rs  rpc.rs  tally.rs
firmware/src/ksz8851snl/: mod.rs  registers.rs
tally-firmware/: Cargo.toml
tally-firmware/.cargo/: config.toml
tally-firmware/src/: leds.rs  main.rs  rpc.rs  tally.rs
tally-firmware/src/ksz8851snl/: mod.rs  registers.rs
tally-rpc/: Cargo.toml
tally-rpc/src/: lib.rs  rpc.rs
tally-tool/: Cargo.toml
tally-tool/src/: main.rs
