[package]
edition = "2024"
name = "firmware"
version = "0.1.0"

[dependencies]
bondrewd = { version = "0.1.14", default-features = false, features = ["derive"] }
bondrewd-derive = "0.3.18"
bytemuck = "1.23.0"
defmt = {version = "1.0.1", optional = true}
embassy-executor = { version = "0.7.0", features = ["executor-thread"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.7.0", features = ["dhcpv4", "tcp", "udp"] }
embassy-net-driver-channel = "0.3.0"
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embassy-time-driver = "0.2.0"
embedded-hal = { version = "1.0.0"}
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-registers = "0.9.12"
esp-alloc = "0.6.0"
esp-backtrace = { version = "0.15.1", features = ["exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.23.1"}
esp-hal-embassy = { version = "0.6.0"}
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", rev = "ad75112"}
esp-println = { version = "0.13.1", features = ["log"] }
esp-wifi = { version = "0.12.0", features = ["wifi"] }
fugit = "0.3.7"
heapless = "0.8.0"
log = "0.4.27"
micromath = "2.1.0"
postcard = "1.1.1"
postcard-rpc = { version = "0.11.9", path = "../../postcard-rpc/source/postcard-rpc", features = [ "defmt", "embassy-net-tcp-server", "embassy-usb-0_4-server", "embassy-usb-0_3-server"], default-features = false }
postcard-schema = "0.2.1"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
smart-leds = "0.4.0"
static_cell = "2.1.0"
tally-rpc = { version = "0.1.0", path = "../tally-rpc" }

[[bin]]
name = "firmware"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true
panic = "abort"

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

[features]
default = ["defmt", "esp32c3"]
defmt = ["dep:defmt", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03", "embassy-net/defmt", "esp-println/defmt-espflash"]
esp32c3 = ["esp-hal-smartled/esp32c3", "esp-backtrace/esp32c3", "esp-hal/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3", "esp-wifi/esp32c3"]

[profile.dev.package."esp-wifi"]
opt-level = 3

