[package]
name = "tool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tallytool"

[[bin]]
name = "tallycli"

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = ["glow", "default_fonts"] }
postcard-rpc = { version = "0.11.9", path = "../../postcard-rpc/source/postcard-rpc", default-features = false, features = ["tcp", "use-std"] }
tally-rpc = { version = "0.1.0", path = "../tally-rpc" }
tokio = { version = "1.45.0", features = ["net", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
